Edits through to end of chapter 4.

--- a/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
+++ b/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
@@ -716,7 +716,7 @@ Considering the combined Milgram/Waterworth model, it was postulated that these 
 
 \section{The Assembled Mirrorshades Parallel Reality Platform}
 
-Figure \ref{experimentalimplementation} presents an overview of the individual components and services that make up the Mirrorshades parallel reality platform as used in user studies at St Salvator's chapel.
+Figure \ref{experimentalimplementation} presents an overview of the individual components and services that make up the Mirrorshades parallel reality platform as employed in user studies at St Salvator's chapel.
 
 \begin{figure}[h]
 	\thispagestyle{empty}
@@ -732,12 +732,12 @@ The hardware components of the system that are carried by the user comprise:
 \begin{itemize}
 	\item An Oculus Rift DK1 HMD modified by the addition of a stereo camera video see-through solution comprising 2x Logitech C310 webcams modified with S-mount lens mounts and 2.1mm lenses to provide approximately 81.2\textdegree\ horizontal FOV of the RW environment.
 	\item A 12,000mAh USB battery pack, capable of outputting 2.1A at 5V, to power the DK1.
-	\item A Clevo W110ER laptop computer, with an Intel i7-3632QM four-core/eight-thread processor, Nvidia GT 650M graphics card, 16GiB system memory and a SSD to allow safe operation while moving.
+	\item A Clevo W110ER laptop computer, with an Intel i7-3632QM four-core/eight-thread processor, Nvidia GT 650M graphics card, 16GiB system memory and a SSD to allow safe operation while moving, running Windows 7 Enterprise.
 	\item A Google Nexus 5 smartphone, running Android 4.4.4.
 	\item An Xbox 360 wireless controller, with USB receiver.
 \end{itemize}
 
-Figure \ref{DSCN0198.jpg} shows an overview of this hardware; the laptop computer is bottom left, the DK1 control box (with USB battery pack, 4-port USB hub and Xbox controller receiver) is bottom right, the DK1 itself (with camera solution attached) is top right, the Xbox controller is top center and the Nexus 5 smartphone is top left. Figure \ref{DSCN0191.jpg} shows a detailed view of the USB battery pack (white, bottom), the DK1 control box (directly above battery), the USB hub (on top, right) and the Xbox controller receiver (top, left). The use of a USB hub allows there to be only two wires running between the control box bundle and the laptop, which can be seen in figure \ref{DSCN0198.jpg} - the grey cable atop the laptop is the cable from the USB hub and carries the DK1 head tracker information, camera feeds and Xbox controller commands, while the black cable is the HDMI cable that carries visual output from the laptop to the DK1.
+Figure \ref{DSCN0198.jpg} shows an overview of this hardware: the laptop computer is bottom left, the DK1 control box (with USB battery pack, 4-port USB hub and Xbox controller receiver) is bottom right, the DK1 itself (with camera solution attached) is top right, the Xbox controller is top center and the Nexus 5 smartphone is top left. Figure \ref{DSCN0191.jpg} shows a detailed view of the USB battery pack (white, bottom), the DK1 control box (directly above battery), the USB hub (on top, right) and the Xbox controller receiver (top, left). The use of a USB hub allows there to be only two cables running between the control box bundle and the laptop, which can be seen in figure \ref{DSCN0198.jpg} - the grey cable atop the laptop is the cable from the USB hub and carries the DK1 head tracker information, camera feeds and Xbox controller commands, while the black cable is the HDMI cable that carries visual output from the laptop to the DK1.
 
 \TwoFig{DSCN0198.jpg}{Hardware of the Mirrorshades platform carried by the user.}{DSCN0198.jpg}
        {DSCN0191.jpg}{Detail of Mirrorshades control box bundle.}{DSCN0191.jpg}
@@ -751,24 +751,24 @@ The software components of the system comprise:
 	\item A PHP page on the database server that allows IndoorAtlas position data to be submitted to MySQL.
 	\item A MySQL database server that stores location data for the phone and allows these data to be accessed by any SQL capable client.
 	\item Web visualizations of position data held within the MySQL database for both the department building and St Salvtor's chapel (see figures \ref{indooratlas-webpage-jack-cole.png} and \ref{indooratlas-webpage-sallies.png}).
-	\item A Unity application that runs on the laptop, combining a virtual model of the building, experienced with the DK1's head tracking, with RW camera streams, controlled via Xbox controller actions and the IndoorAtlas position data polled from the MySQL database server. The source code of this application is available online\footnote{\url{https://github.com/CJ-Davies/Mirrorshades}}.
+	\item A Unity application that runs on the laptop, combining a virtual model of the building, experienced with the DK1's head tracking, with RW camera streams, controlled via Xbox controller actions and the IndoorAtlas position data polled from the MySQL database server. The Unity project for this application is available online\footnote{\url{https://github.com/CJ-Davies/Mirrorshades}}.
 \end{itemize}
 
-Due to the use of a SSD with high transfer rates the video stream sent to the DK1 from the Unity application could be recorded, which by using Nvidia's ShadowPlay\footnote{\url{http://www.geforce.co.uk/geforce-experience/shadowplay}} technology is accomplished without a measurable detriment to framerate of the application. Unlike traditional software video capture solutions such as FRAPS\footnote{\url{http://www.fraps.com/}} which read individual frames from the graphics hardware's back buffer and then encode them using the CPU, ShadowPlay makes use of hardware accelerated support built into the GPU to perform the capture and encode process and largely eliminates any overhead.
+Due to the use of a SSD with high transfer rates the video stream sent to the DK1 from the Unity application could be recorded, which by using Nvidia's ShadowPlay\footnote{\url{http://www.geforce.co.uk/geforce-experience/shadowplay}} technology was accomplished without a measurable reduction in framerate of the application. Unlike traditional software video capture solutions such as FRAPS\footnote{\url{http://www.fraps.com/}} which read individual frames from the graphics hardware's back buffer and then encode them using the CPU, ShadowPlay makes use of hardware accelerated support built into the GPU to perform the capture and encode process and largely eliminates any overhead.
 %=========================================================================================================
 
 \subsection{Execution}
-The Unity application hosts the VR representation of the chapel and takes in feeds from both cameras, the DK1 head tracker and the Xbox controller. It also polls the MySQL server for the most recent position data. These inputs are combined together to form the visual output for the DK1 to display to the user. As the user moves their head the visuals that are presented to them upon the DK1's display change accordingly; the RW visuals change due to the cameras being physically fixed to the DK1 and the VR visuals change due to data from the head tracker being used to change the orientation of the Unity `cameras' accordingly.
+The Unity application hosts the VR representation of the chapel and takes in feeds from both cameras, the DK1 head tracker and the Xbox controller. It also polls the MySQL server for the most recent position data. These inputs are combined together to form the visual output for the DK1 to display to the user. As the user moves their head the visuals that are presented to them upon the DK1's display change accordingly; the RW visuals change due to the cameras being physically fixed to the DK1 and the VR visuals change due to data from the head tracker being used to change the orientation of the virtual cameras in Unity accordingly.
 
-Alignment between RW and VR is achieved by correctly orienting the DK1 before starting the Unity application - the Unity prefab that encapsulates the avatar functionality has a known virtual origin orientation and knowing this allows the DK1 to oriented to match it to align the RW and VR visuals (see section \ref{registration-of-camera-and-unity-visuals}).
+Alignment between RW and VR is achieved by correctly orienting the DK1 before starting the Unity application. The Unity prefab object that encapsulates the avatar functionality has a known virtual origin orientation and knowing this allows the DK1 to be oriented to align the RW and VR visuals (see section \ref{registration-of-camera-and-unity-visuals}).
 
-As the user changes their position by walking the visuals that are presented to them upon the DK1's display also change accordingly; again the RW visuals change due to the cameras' physical attachment to the DK1 whilst the VR visuals change due to the user's position, as reported by the smartphone and IndoorAtlas, being used to move the position of the Unity cameras to the equivalent position within the VR representation. As the user presses buttons or pulls the trigger upon the Xbox controller, the visuals that are presented to them upon the DK1's display transition between RW and VR in different styles depending upon which button/trigger was activated.
+As the user changes their position by walking, the visuals that are presented to them upon the DK1's display also change accordingly. The RW visuals change due to the cameras' physical attachment to the DK1 whilst the VR visuals change due to the user's position, as reported by the smartphone and IndoorAtlas, being used to move the position of the Unity cameras to the equivalent position within the VR representation. As the user presses buttons or pulls the trigger upon the Xbox controller, the visuals that are presented to them upon the DK1's display transition between RW and VR in different styles depending upon which button/trigger was activated.
 
 %=========================================================================================================
 
 \section{Initial Testing}
 \label{initial-testing}
-The complete Mirrorshades platform was initially tested within the department building (a video of which can be viewed online\footnote{\url{https://www.youtube.com/watch?v=oy5NqqDtkJ4}}) as shown in figures \ref{testing-vids-screenshots/jc-1.png} and \ref{testing-vids-screenshots/jc-2.png}. Note that this test took place with an earlier PS3 Eye based camera solution in which the camera feeds were rendered to the full size of the DK1's display rather than the later C310 solution in which the camera feeds have their FOV correctly scaled. This initial integration test confirmed the correct functioning of the platform as a whole and that the accuracy of the IPS was great enough for the desired modality of interaction, at least within the department building with its abundance of metal building materials and electrical provisions.
+The complete Mirrorshades platform was initially tested within the department building (a video of which can be viewed online\footnote{\url{https://www.youtube.com/watch?v=oy5NqqDtkJ4}}) as shown in figures \ref{testing-vids-screenshots/jc-1.png} and \ref{testing-vids-screenshots/jc-2.png}. Note that this test took place with an earlier PS3 Eye based camera solution before the camera feeds had been correctly scaled. This initial integration test confirmed the correct functioning of the platform as a whole and that the accuracy of the IPS was great enough for the desired modality of interaction, at least within the department building with its abundance of metal building materials and electrical provisions.
 
 \TwoFig{testing-vids-screenshots/jc-1.png}{Mirrorshades test in department building (real).}{testing-vids-screenshots/jc-1.png}
        {testing-vids-screenshots/jc-2.png}{Mirrorshades test in department building (virtual).}{testing-vids-screenshots/jc-2.png}
@@ -776,12 +776,12 @@ The complete Mirrorshades platform was initially tested within the department bu
 %\TwoFig{testing-vids-screenshots/jc-3.png}{Mirrorshades test in department building.}{testing-vids-screenshots/jc-3.png}
 %       {testing-vids-screenshots/jc-4.png}{Mirrorshades test in department building.}{testing-vids-screenshots/jc-4.png}
 
-The first test in St Salvator's chapel (a video of which can be viewed online\footnote{\url{https://www.youtube.com/watch?v=W4oPIHIr9Z4}}) as shown in figures \ref{testing-vids-screenshots/sallies-first-1.png} and \ref{testing-vids-screenshots/sallies-first-2.png}, confirmed that the accuracy of the IPS within the chapel was also sufficient and that the wireless network provision within the chapel was of sufficient speed and stability to support the operation of the platform.
+The first test in St Salvator's chapel (a video of which can be viewed online\footnote{\url{https://www.youtube.com/watch?v=W4oPIHIr9Z4}}) as shown in figures \ref{testing-vids-screenshots/sallies-first-1.png} and \ref{testing-vids-screenshots/sallies-first-2.png}, confirmed that the accuracy of the IPS within the chapel was also sufficient and that the wireless network provision within the chapel was of sufficient speed and stability to support the operation of the platform. By this point the camera feeds had had correct scaling applied to them, thus the `narrower' appearance of the images in figure \ref{testing-vids-screenshots/sallies-first-1.png} than in figure \ref{testing-vids-screenshots/jc-1.png}.
 
 \TwoFig{testing-vids-screenshots/sallies-first-1.png}{Mirrorshades test in St Salvator's chapel (real).}{testing-vids-screenshots/sallies-first-1.png}
        {testing-vids-screenshots/sallies-first-2.png}{Mirrorshades test in St Salvator's chapel (virtual).}{testing-vids-screenshots/sallies-first-2.png}
 
-Testing then took place with members of the Open Virtual Worlds research group (a video of which can be viewed online\footnote{\url{https://www.youtube.com/watch?v=pvGV5dCjt4U}}) as seen in figures \ref{testing-vids-screenshots/sallies-second-1.png} to \ref{testing-vids-screenshots/sallies-second-8.png}. These tests provided initial feedback from participants not directly involved with the development platforms. During these early tests there was a strong preference expressed from the participants toward the transition with linear interpolation (see section \ref{transition-with-linear-interpolation}).
+Testing then took place with members of the Open Virtual Worlds research group (a video of which can be viewed online\footnote{\url{https://www.youtube.com/watch?v=pvGV5dCjt4U}}) as seen in figures \ref{testing-vids-screenshots/sallies-second-1.png} to \ref{testing-vids-screenshots/sallies-second-8.png}. These tests provided initial feedback from participants not directly involved with development of the platform. During these early tests there was a strong preference expressed from the participants toward the transition with linear interpolation (see section \ref{transition-with-linear-interpolation}).
 
 \TwoFig{testing-vids-screenshots/sallies-second-1.png}{Mirrorshades test with OVW group members in St Salvator's chapel (composite, 1/4).}{testing-vids-screenshots/sallies-second-1.png}
        {testing-vids-screenshots/sallies-second-4.png}{Mirrorshades test with OVW group members in St Salvator's chapel (composite, 2/4).}{testing-vids-screenshots/sallies-second-4.png}
@@ -795,8 +795,8 @@ Testing then took place with members of the Open Virtual Worlds research group (
 %=========================================================================================================
 
 \section{Summary}
-This chapter has covered the development of the Mirrorshades parallel reality platform. Expanding upon the VTW platform to further investigate the freeform exploration scenario and aspects of the detailed comparison scenario, Mirrorshades permits parallel reality experiences with greater positional accuracy and increased virtual immersion, allowing the experiential aspect of switching wholly between complete and discrete real and virtual environments to be fully explored. Mirrorshades combines an Oculus Rift DK1 HMD with a stereo video see-through solution and the IndoorAtlas IPS. Four different styles of performing transitions between real and virtual stimuli have been implemented and their expected user experiences discussed using the combined Milgram/Waterworth model.
+This chapter has recounted the development of the Mirrorshades parallel reality platform, which combines the Oculus Rift DK1 VR HMD with the IndoorAtlas IPS. The greater positional accuracy of the IPS compared to the GPS solution used within the VTW project allows investigation into the freeform exploration scenario and aspects of the detailed comparison scenario. The immersive nature of the DK1, completely filling the user's FOV with mediated stereoscopic visuals, allows for investigation of the experiential aspect of switching wholly between complete and discrete real and virtual environments that was originally envisaged of the parallel reality concept. Four different styles of transition between real and virtual stimuli have been implemented and their expected user experience illustrated using the combined Milgram/Waterworth model.
 
-Initial testing of the platform was conducted, first within a departmental building and then within St Salvator's chapel itself, which is an ideal real world location for a case study into the use of Mirrorshades within the field of virtual heritage. Latency measurements were performed and while higher than published best practices for VR experiences, latency of RW visuals did not arise in this initial phase of testing as a major detractor to the enjoyment or utility of the platform.
+Latency measurements of the video see-through solution were performed and while higher than published best practices for VR experiences were not expected to be as detrimental to user experience in the style of interaction envisaged of the platform as they would in more traditional VR gaming scenarios. Initial testing of the platform was conducted, first within a department building and then within St Salvator's chapel, which was introduced as an ideal real world location at which to perform a user study of the Mirrorshades platform within the field of virtual heritage.
 
 %=========================================================================================================
