--- a/collaborations.tex
+++ b/collaborations.tex
@@ -1,8 +1,8 @@
-While the work presented in this thesis was undertaken principally by myself, it would not have been possible were it not for various collaborations. In particular the virtual reconstructions of St Andrews cathedral and St Salvator's chapel, that played a crucial role in both the Virtual Time Window and Mirrorshades projects, were created by the members of the Open Virtual Worlds research group working in collaboration with academics from the university's Art History, History and Archaeology departments, as well as with domain experts from heritage organisations including Historic Scotland and the National Trust for Scotland. Particular recognition should go to Sarah Kennedy for her critical role of modelling the reconstructions, Iain Oliver for his systems administration and for providing a Unity version of the OpenSim chapel reconstruction via a tool of his own authoring, and Richard Fawcett with the School of Art History for his invaluable input to these reconstruction processes.
+While the work presented in this thesis was undertaken principally by myself, it would not have been possible were it not for collaboration. In particular the virtual reconstructions of St Andrews cathedral and St Salvator's chapel, that played a crucial role in both the Virtual Time Window and Mirrorshades projects, were created by the members of the Open Virtual Worlds research group working in collaboration with academics from the university's Art History, History and Archaeology departments, as well as with domain experts from heritage organisations including Historic Scotland and the National Trust for Scotland. Particular recognition should go to Sarah Kennedy for her critical role of modelling the reconstructions, Iain Oliver for his systems administration and for providing a Unity version of the OpenSim chapel reconstruction via a tool of his own authoring, and Richard Fawcett with the School of Art History for his invaluable input to these reconstruction processes. Additionally the Unity model of the Jack Cole department building, that played a crucial role in the development and early testing of the Mirrorshades platform, was created by Alex Field.
 
 %=====================
 
-Co-authored peer reviewed papers that cover the process of creation and utilisation of these reconstructions include:
+Co-authored peer reviewed papers that cover the process of creation and utilisation of the cathedral and chapel reconstructions include:
 
 \begin{itemize}
 
