Switched order of automatic switches & reduced maximum opacity (chapter 4).

--- a/04_vtw/vtw.tex
+++ b/04_vtw/vtw.tex
@@ -176,7 +176,7 @@ Investigating the parallel reality concept by application to virtual heritage, p
 Although parallel reality as a concept is less critical of accurate registration than augmented reality, the accuracy of registration available particularly in terms of positional data represents a restriction upon the style of interaction possible with a parallel reality system, a point recognised by Liest\o l et al. during their sitsim experiments~\cite{Liestøl2012}. Considering a scale of increasing accuracy, three use cases for parallel reality within cultural heritage scenarios can be envisioned, with each representing increased interactivity in the terms of figure \ref{taxonomy_1.png}:
 
 \begin{enumerate}
-	\item Static viewpoints - Where the accuracy of the positioning system used by a parallel reality system is low, a style of interaction in which users move between predetermined points of interest at which they gain the ability to view the virtual environment from the equivalent vantage point is possible. In this scenario users are free to explore any vantages within the real environment, but are restricted to viewing the virtual environment from particular vantages chosen by curators for their particular importance, similar to the static AR experiences mentioned in section \ref{existing-virtual-heritage-applications}. The minimum distance between any pair of these viewpoints is dictated by the worse case accuracy of the positioning solution used by the parallel reality system.
+	\item Static viewpoints - Where the accuracy of the positioning system used by a parallel reality system is low, a style of interaction in which users move between predetermined points of interest at which they gain the ability to view the virtual environment from the equivalent vantage point is possible. In this scenario users are free to explore any vantages within the real environment, but are restricted to viewing the virtual environment from particular vantages chosen by curators for their particular importance, similar to indirect AR and the static AR experiences mentioned in section \ref{existing-virtual-heritage-applications}. The minimum distance between any pair of these viewpoints is dictated by the worse case accuracy of the positioning solution used by the parallel reality system.
 	
 	\item Freeform exploration - Where the accuracy of the positioning system is high enough to reliably differentiate a user's position between adjacent rooms/corridors, placing them on the correct side of walls and estimating their position within open areas, a style of interaction is possible wherein the user has the ability to view the virtual environment from the equivalent vantage point wherever they may be in the site. In this scenario users are free to explore and compare any vantages within both real and virtual environments, although direct comparison of small features/artefacts observed from less than several meters away may not be possible due to inaccuracy in the positioning solution.
 	
