--- a/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
+++ b/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
@@ -684,20 +684,6 @@ Figure \ref{scenario2} illustrates this scenario, while considering the combined
 
 %=========================================================================================================
 
-\subsection{Reduced maximum opacity}
-\label{subsub-baseopacity}
-Independent or in addition to any of the previous transition types, the maximum opacity of the game objects that the camera feeds are rendered upon is reduced such that the default view displays a mix of VR superimposed upon RW. Figure \ref{scenariobaseopacity} illustrates this scenario in combination with a hard switch (section \ref{sub-hardswitch}) in which the user triggers hard switches between the default view of the VR/RW mix and a fully VR environment. Figure \ref{transition-mix-vr.png} visualises the expected user experience of this RW/VR mix default view upon the combined Milgram/Waterworth model when combined with a linear interpolated transition (section \ref{transition-with-linear-interpolation}). The sensus of attention is depicted as being higher when viewing the RW/VR mix default view than when viewing a wholly RW default view such as in figure \ref{transition-rw-vr-hard.png}, as it was expected that `making sense' of the mixed environment will require more conscious thought than one that is wholly real or wholly virtual. However the deflection upon the focus of attention axis when performing the transition is depicted as being smaller than in figure \ref{focus-locus-sensus-with-virtuality-continuum-with-transition}, which shows the same linear interpolated transition as figure \ref{transition-mix-vr.png} but from a starting position of a wholly RW environment. This is because the constant presence in the user's default view of some small amount of the VR environment is expected to make switching fully to that VR environment less unpleasant than when that VR environment is presented as a discrete alternative.
-
-\begin{figure}[h]
-	\begin{center}
-		\includegraphics[width=0.5\textwidth]{base-opacity-hard-switch.png}
-		\caption{Instantaneous hard switch between RW/VR mix and VR visual stimuli.}
-		\label{scenariobaseopacity}
-	\end{center}
-\end{figure}
-
-%=========================================================================================================
-
 \subsection{Periodic hard switches}
 \label{subsub-periodic}
 Independent or in addition to any of the previous transition types, the visual stimuli displayed by the DK1 switch from the default view to VR at a set interval and for a set amount of time. For example, every 3 seconds the stimuli switch from the default view to VR for 0.2 of a second before switching back to the default view. Any user triggered transition causes the interval timer to be reset such that an `automated' switch will never occur after less time from a user triggered switch than the set interval. Automated transitions are disabled whilst \texttt{[RT]} is at all depressed. Figure \ref{scenariotimed} illustrates this scenario, where \texttt{i} represents the interval between switches and \texttt{d} represents the duration of the switch from the default view to VR.
@@ -710,7 +696,23 @@ Independent or in addition to any of the previous transition types, the visual s
 	\end{center}
 \end{figure}
 
-Considering the combined Milgram/Waterworth model, it was postulated that these periodic glimpses of the VR environment would lessen the deflection upon the focus of attention axis when the user subsequently performed a manual transition to VR. In a similar manner as to how changing the default view from wholly RW to a RW/VR mix (see section \ref{subsub-baseopacity}) was expected to reduce the negative impact of transitions, by always overlaying a certain level of the VR environment, providing momentary `glimpses' of the VR environment was hoped to perform similarly. However as the default view in this scenario can be maintained at 100\% RW, it may avoid the increase in sensus of attention and focus of attention expected to result from viewing a RW/VR mix.
+Considering the combined Milgram/Waterworth model, it was postulated that these periodic glimpses of the VR environment would lessen the deflection upon the focus of attention axis when the user subsequently performed a manual transition to VR, as they would perhaps almost subconsciously maintain an awareness of the current state of the virtual environment at all times, even if the duration of the periodic switches was not enough to discern particular details. However by keeping the default view as 100\% RW, sensus of attention when viewing the default view was expected not to be drastically affected by the introduction of the periodic switches.
+
+%=========================================================================================================
+
+\subsection{Reduced maximum opacity}
+\label{subsub-baseopacity}
+Independent or in addition to any of the previous transition types, the maximum opacity of the game objects that the camera feeds are rendered upon is reduced such that the default view displays a mix of VR superimposed upon RW. Figure \ref{scenariobaseopacity} illustrates this scenario in combination with a hard switch (section \ref{sub-hardswitch}) in which the user triggers hard switches between the default view of the VR/RW mix and a fully VR environment. Figure \ref{transition-mix-vr.png} visualises the expected user experience of this RW/VR mix default view upon the combined Milgram/Waterworth model when combined with a linear interpolated transition (section \ref{transition-with-linear-interpolation}).
+
+\begin{figure}[h]
+	\begin{center}
+		\includegraphics[width=0.5\textwidth]{base-opacity-hard-switch.png}
+		\caption{Instantaneous hard switch between RW/VR mix and VR visual stimuli.}
+		\label{scenariobaseopacity}
+	\end{center}
+\end{figure}
+
+Unlike with the periodic hard switch approach (section \ref{subsub-periodic}), which also introduces an aspect of the VR environment to the default view in an attempt to reduce the severity of deflection upon the focus of attention axis when performing a switch, the sensus of attention in this reduced maximum opacity scenario is depicted as being heightened when viewing the RW/VR mix default view. This is because `making sense' of the mixed environment was expected to require more conscious thought than of an environment that is wholly real, even one that is wholly real but interspersed with momentary glimpses of virtual.
 
 %=========================================================================================================
 
